Bug 276776 - no option to rename file when saving attachments
Summary: no option to rename file when saving attachments
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-29 20:37 UTC by S. Burmeister
Modified: 2011-10-02 14:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments
dialogue when saving existing attachments (31.32 KB, image/png)
2011-06-30 17:59 UTC, S. Burmeister
Details
screenshot of "pick folder" GUI (66.98 KB, image/png)
2011-06-30 20:09 UTC, S. Burmeister
Details
dialogue one gets when kmail wants to overwrite a file when "saving all attachments" (21.24 KB, image/png)
2011-10-01 17:54 UTC, S. Burmeister
Details
dolphin's dialogue when it want to overwrite a file, inlcuding the option to "rename" (9.97 KB, image/png)
2011-10-01 17:56 UTC, S. Burmeister
Details

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2011-06-29 20:37:27 UTC
Version:           2.1.0 (using KDE 4.6.4) 
OS:                Linux

If one uses "save attachments" from the rmb menu and the file already exists there is no option to rename the file, i.e. one can only overwrite or cancel.

I guess using the standard file management GUI would help.

Reproducible: Didn't try

Steps to Reproduce:
right click in preview pane
pick "save attachments"
do the same again 

Actual Results:  
dialogue that asks for overwrite or cancel instead of offering rename

Expected Results:  
standard kde gui for copying etc.
Comment 1 Laurent Montel 2011-06-30 14:09:37 UTC
I can't reproduce this bug, i can change name.
Perhaps you can create screenshot to show the bug.
For the moment I didn't see this bug
Comment 2 S. Burmeister 2011-06-30 17:51:11 UTC
You must not use "Save as..." but "Save attachments".
Comment 3 S. Burmeister 2011-06-30 17:59:29 UTC
Created attachment 61490 [details]
dialogue when saving existing attachments

E-Mail with three attachments and no text, just a signature. "Save attachments" shows dialogue to pick a folder not the normal dialogue where one can pick the filename as well.
Comment 4 Laurent Montel 2011-06-30 18:08:39 UTC
it's kmail2 ? (kmail -akonadi) ?
Comment 5 S. Burmeister 2011-06-30 18:26:32 UTC
kmail 2.1.0
Comment 6 S. Burmeister 2011-06-30 18:33:36 UTC
If I use "save attachements" with an email that only has one attachment I get the normal dialogue. This is an imap account in case that makes some difference.
Comment 7 Laurent Montel 2011-06-30 18:44:47 UTC
So we must have several attachment ?
Ok will test it this night.
I hope to have this bug it will not hard to reproduce it :)
Comment 8 S. Burmeister 2011-06-30 20:08:37 UTC
Yes. This might even be a general KDE problem, i.e. happens every time the GUI to pick a folder rather than "save a file" is used. Not sure though which other apps use it, so I cannot try that at the moment. I'll attach a screenshot of the GUI I mean. IF that GUI does not appear it is not possible to reproduce the bug.
Comment 9 S. Burmeister 2011-06-30 20:09:45 UTC
Created attachment 61496 [details]
screenshot of "pick folder" GUI

Only if this dialogue is used the issue occurs, i.e. there no option to rename files but just overwrite or cancel.
Comment 10 Laurent Montel 2011-08-05 07:19:32 UTC
It's dialog to save all attachments not just one attachment.
So you define directory whre install it.
Comment 11 S. Burmeister 2011-08-05 07:46:46 UTC
(In reply to comment #10)
> It's dialog to save all attachments not just one attachment.
> So you define directory whre install it.

Sure.

If one saves/copies files in KDE which do already exist in the destination folder a dialogue pops-up and offers the functionality to skip/overwrite/rename.

However, if one saves attachments via the "Save all attachments" and picks a folder where those attachments do already exist that dialogue does not appear and the user can only chose to overwrite or cancel.

That's what this bug is about. If one of the attachments that are saved to the folder does already exist, kmail should display the usual file dialogue, including the functionality to rename the file to be saved and not just "overwrite or cancel".
Comment 12 S. Burmeister 2011-10-01 17:54:55 UTC
Created attachment 64127 [details]
dialogue one gets when kmail wants to overwrite a file when "saving all attachments"

The dialogue only includes "overwrite", "skip" and "cancel". This means one has to either overwrite or open a file manager to rename the files and then use kmail again to "save all attachments".
Comment 13 S. Burmeister 2011-10-01 17:56:07 UTC
Created attachment 64128 [details]
dolphin's dialogue when it want to overwrite a file, inlcuding the option to "rename"
Comment 14 Laurent Montel 2011-10-02 14:16:29 UTC
Git commit f29d2286326ab2fce60b9e9de66b5be4cb9b6343 by Montel Laurent.
Committed on 02/10/2011 at 16:15.
Pushed by mlaurent into branch 'master'.

Fix Bug 276776 - no option to rename file when saving attachments

FIXED-IN: 4.8
BUG: 276776

M  +1    -1    messageviewer/CMakeLists.txt
A  +197  -0    messageviewer/renamefiledialog.cpp     [License: GPL (v2) (+Qt exception)]
A  +78   -0    messageviewer/renamefiledialog.h     [License: GPL (v2) (+Qt exception)]
M  +33   -12   messageviewer/util.cpp

http://commits.kde.org/kdepim/f29d2286326ab2fce60b9e9de66b5be4cb9b6343