Fix Bug 276776 - no option to rename file when saving attachments

FIXED-IN: 4.8
BUG: 276776